Bug 156555 - Kget shutdowns when "auto shutdown" is enabled even when the application is manually started and expected to stay open.
Summary: Kget shutdowns when "auto shutdown" is enabled even when the application is m...
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-24 16:43 UTC by Catcatmu
Modified: 2008-01-24 19:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Catcatmu 2008-01-24 16:43:29 UTC
Version:           2.0 (using KDE 4.0.0)
Installed from:    SuSE RPMs
OS:                Linux

Normally, the option "auto shutdown" should only close kget when it was downloading a file and completes it. It must not shutdown when it is manually started(no downloads active).
For example, put a download using konqueror works, once it downloads it close. But when it is started manually, although no active downloads, kget should remain open (eg to manually add a download, modify settings). 

Kget instead closes as soon as you manually open it.

Plugins loaded - default
Backtraces - n/a
Reprodused by: set the "auto shutdown" to true and then manually open by running kget
Expected Behaviour: Should stay open even if no download active.
Comment 1 Lukas Appelhans 2008-01-24 19:32:51 UTC
SVN commit 765802 by lappelhans:

Don't add a TransferObserver if a Transfer is finished...

BUG:156555


 M  +4 -3      kget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=765802