Don't add a TransferObserver if a Transfer is finished...

BUG:156555

svn path=/trunk/KDE/kdenetwork/kget/; revision=765802